[package]
name = "async_sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socket-internals = { path = "async-socket-internals" }
async-socket-macros = { path = "async-socket-macros" }
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["net", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["v4"] }
warp = { version = "0.3.6", features = ["tls"] }
